# Global-Risk-Intelligence-Platform

./: .env.nvidia.example  .gitignore  ACCESS_INFO.md  ACHIEVEMENTS.md  ALPHA_USER_SETUP.md  APPLY_GLOBE_CHANGES.md  ASSET_DATA_SOURCES.md  CHECK_API_STATUS.md  CHECK_SERVICES.md  CIRCUIT_BREAKERS_INFO.md  COMMAND_CENTER_DASHBOARD_SYNC_VERIFICATION.md  COMPLETE.md  CONTRIBUTING.md  CORRECT_URLS.md  DATABASE_IMPLEMENTATION.md  DEMO_GUIDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_SAFE.md  DEPLOY_TO_GITHUB.md  Dockerfile  ENHANCEMENTS.md  ENHANCEMENTS_COMPLETE.md  FINAL_STATUS.md  FIX_CIRCUIT_BREAKERS.md  FIX_PORT_9002.md  FIX_PROCESS_ENV.md  FIX_PROXY.md  FIX_SERVER_ISSUES.md  HOW_TO_SEE_RAG_GUARDRAILS.md  IDENTITY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MASTER_PLAN.md  Makefile  NEXT_STEPS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  (+55 more)
apps/api/: .env.brev.example  .env.example  Dockerfile  alembic.ini  migrate.sh  prod.db.bak-20260209_183836  pyproject.toml  requirements-brev.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260115_0001_001_initial_schema.py  20260117_0001_week7_8_features.py  20260121_0001_add_risk_indexes.py  20260124_0001_add_bim_tables.py  20260124_0002_add_scss_sro_tables.py  20260125_0001_add_financial_product_fields.py  20260125_0002_extend_provenance.py  20260125_0003_add_spatial_data_tables.py  20260125_0004_add_project_tables.py  20260126_0001_add_portfolio_tables.py  20260127_0001_add_fraud_tables.py  20260128_0001_add_annotation_tables.py  20260128_0002_add_twin_asset_library.py  20260130_0001_add_twin_asset_library_category.py  20260130_0002_add_cip_tables.py  20260130_0003_add_scss_phase5_phase6_tables.py  20260205_0001_add_sro_phase13_tables.py  20260205_0002_add_cip_cascade_simulations.py  20260205_0003_add_scss_supply_chains.py  20260206_0001_add_asgi_phase3_tables.py  20260206_0002_add_postgis_spatial_columns.py  20260208_0001_add_ethicist_audit_log.py  20260209_0001_add_risk_posture_snapshots.py  20260214_0001_add_digital_twin_regime_context.py  20260214_0002_add_asset_pd_lgd.py  20260218_0001_add_srs_tables.py  20260218_0002_add_cityos_tables.py  20260218_0003_add_fst_tables.py  20260218_0004_add_grant_payouts.py  20260218_0005_add_municipal_subscriptions.py  20260218_0006_add_client_finetune_tables.py  20260218_0007_add_agent_audit_log.py  20260218_0008_add_module_audit_log.py  20260218_0009_add_regulatory_compliance_verification.py  20260218_0010_add_cross_track_tables.py  20260225_0001_add_ingestion_sources.py  20260225_0002_add_backtest_runs.py  20260225_0003_add_alert_triggers.py  20260225_0004_add_fat_tail_events.py  20260225_0005_add_lpr_tables.py  (+12 more)
apps/api/config/: nemo_finetune.yaml
apps/api/data/high_fidelity/: .gitkeep
apps/api/scripts/: __init__.py  check_data_federation.py  fix-migration-null-bytes.py  init_timescale.sql  risk_events_sync_once.py  run_nemo_finetune.py  seed_high_fidelity.py
apps/api/scripts/etl_high_fidelity/: README.md  __init__.py  adcirc_to_platform.py  config.py  wrf_to_platform.py
apps/api/src/: __init__.py  main.py
apps/api/src/core/: __init__.py  celery_app.py  config.py  database.py  enterprise_auth.py  metrics.py  performance.py  provenance_response.py  regulatory_disclaimers.py  regulatory_document_templates.py  regulatory_phrases.py  scheduler.py  security.py  spatial.py  storage.py  tracing.py
apps/api/src/data/: cities.py  city_exposure_reference.py  city_risk_taxonomy.py  demo_communities.py  source_registry_seed.py
apps/api/src/data_federation/: __init__.py
apps/api/src/integrations/: __init__.py  base.py  jira.py  servicenow.py
apps/api/src/models/: __init__.py  agent_audit_log.py  agent_message_log.py  alert_trigger.py  annotation.py  asset.py  audit_log_db.py  backtest_run.py  bim.py  client_finetune.py  compliance_verification.py  consent.py  decision_object.py  digital_twin.py  disinformation.py  enterprise_auth.py  ethicist_audit.py  events.py  external_risk_events.py  fat_tail_event.py  field_observation.py  fraud.py  grant_payout.py  historical_event.py  hitl_approval.py  human_review.py  ingestion_source.py  lpr.py  market_data_snapshot.py  module_audit_log.py  municipal_contractor.py  municipal_onboarding_request.py  municipal_subscription.py  ontology.py  portfolio.py  project.py  provenance.py  recovery_plan.py  regulatory_document.py  resolved_alert_key.py  (+6 more)
apps/api/src/modules/: __init__.py  base.py  registry.py
apps/api/src/schemas/: __init__.py  high_fidelity.py  universal_stress_schema.py
apps/api/src/services/: __init__.py  agent_actions_log.py  agent_feedback.py  agent_message_bus.py  agent_os.py  agentic_orchestrator.py  agentic_retriever.py  aiq_research_assistant.py  approval_gate.py  arin_export.py  arin_orchestrator.py  asset_risk_calculator.py  audit_extension.py  audit_log.py  audit_trail.py  auto_recommendation_engine.py  backtesting_service.py  basel_calculator.py  bayesian_risk_network.py  bcp_config.py  bcp_prompts.py  before_after_comparison.py  bim_processor.py  bulk_operations.py  cache.py  cascade_gnn.py  city_risk_calculator.py  client_finetune_context.py  client_finetune_pipeline.py  climate_anomalies_service.py  climate_data.py  climate_service.py  command_intent.py  comparable_historical_events.py  complex_asset_scoring.py  compliance_agent.py  compliance_dashboard.py  concentration_service.py  consensus_engine.py  contagion_matrix.py  (+111 more)
apps/api/src/tasks/: __init__.py  twin_asset_tasks.py
apps/api/tests/: conftest.py  test_agent_os.py  test_api.py  test_asgi.py  test_dashboard_and_plan_features.py  test_data_federation_adapters.py  test_data_federation_api.py  test_data_federation_pipelines.py  test_enterprise_auth.py  test_fst_module.py  test_google_cloud_clients.py  test_metric_consistency.py  test_nemo_services.py  test_pars_protocol.py  test_risk_intelligence.py  test_srs_module.py
apps/api/tests/integration/: test_health_auth_cadapt.py
apps/api/tests/security/: __init__.py  (+1 more)
libs/: README.md
sdk/python/: pyproject.toml
sdk/python/pfrp_sdk/: __init__.py  client.py
(+958 files in other folders)
