[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfrp-api"
version = "0.1.0"
description = "Physical-Financial Risk Platform API"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.14.0",
    
    # Neo4j (Knowledge Graph)
    "neo4j>=5.15.0",
    
    # Redis & Celery
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    
    # MinIO (Object Storage)
    "minio>=7.2.0",
    
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # 3D/BIM Processing (core only - open3d optional)
    "numpy>=1.26.0",
    "trimesh>=4.0.0",
    
    # Climate & Geospatial
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    
    # ML/AI (core only - heavy deps optional)
    "scikit-learn>=1.4.0",
    
    # High-performance computing (CPU-optimized)
    "numba>=0.59.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    
    # Parallel computing
    "dask[complete]>=2024.1.0",
    
    # WebSocket streaming
    "websockets>=12.0",
    
    # GraphQL
    "strawberry-graphql>=0.217.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    
    # PDF Generation
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# Full ML/AI capabilities (requires Python <3.13)
ml = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "langchain>=0.1.0",
]

# Full 3D/BIM processing
bim = [
    "ifcopenshell>=0.7.0",
    "open3d>=0.18.0",
    "pygltflib>=1.16.0",
    "trimesh>=4.0.0",
]

# Full climate/geospatial (heavy deps)
climate = [
    "xarray>=2024.1.0",
    "netcdf4>=1.6.0",
    "rasterio>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
